--- a/Day 4/config.yml
+++ b/Day 4/config.yml
@@ -1,6 +1,6 @@
 [Credentials]
 username = NRANJAN
-password = Summers@2023
+password = ********(write your password)
 account = dctetaf-wv99639
 warehouse = compute_wh
 database = COVID19_EPIDEMIOLOGICAL_DATA
